temporal-verifier/tests/examples/snapshots/fail/sorts/redeclared_def.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/redeclared_def.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: f was declared multiple times


