temporal-verifier/tests/examples/snapshots/fail/sorts/redeclared_sort.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/redeclared_sort.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: sort s was declared multiple times


