temporal-verifier/tests/examples/snapshots/fail/sorts/sibling_shadowing.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sibling_shadowing.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: x was declared multiple times
  ┌─ tests/examples/fail/sorts/sibling_shadowing.fly:4:1
  │
4 │ assert exists x:bool, x:bool. x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


