temporal-verifier/tests/examples/snapshots/fail/sorts/sort_checking_bool.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sort_checking_bool.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected bool but found s
  ┌─ tests/examples/fail/sorts/sort_checking_bool.fly:6:1
  │
6 │ assert forall x:s. x & true
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^


