temporal-verifier/tests/examples/snapshots/fail/sorts/sort_checking_two_sorts.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sort_checking_two_sorts.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify s and t
  ┌─ tests/examples/fail/sorts/sort_checking_two_sorts.fly:7:1
  │
7 │ assert forall x:s, y:t. x = y
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


