temporal-verifier/tests/examples/snapshots/fail/sorts/sort_inference_basic.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sort_inference_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify s and bool
  ┌─ tests/examples/fail/sorts/sort_inference_basic.fly:6:1
  │
6 │ assert forall x. (forall y:s. y = x) & x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


