temporal-verifier/tests/examples/snapshots/fail/sorts/sort_inference_error.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sort_inference_error.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not solve for the sort of x
  ┌─ tests/examples/fail/sorts/sort_inference_error.fly:6:1
  │
6 │ assert forall x. x = x
  │ ^^^^^^^^^^^^^^^^^^^^^^


